# FantasyLeagueStats

./: .snyk  README.md  pyproject.toml  test.txt
fantasystats/: db.sqlite3  manage.py
fantasystats/fantasyleague/: admin.py  apps.py  models.py  sleeper_api.py  urls.py  views.py
fantasystats/fantasyleague/migrations/: 0001_initial.py  0002_matchup_nflteam_playerscore_teamranking_nflteamstats.py
fantasystats/fantasyleague/static/fantasyleague/css/: style.css
fantasystats/fantasyleague/templates/fantasyleague/: base.html  index.html  team_detail.html  team_insights.html  team_list.html
fantasystats/fantasystats/: asgi.py  settings.py  urls.py  wsgi.py
